--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -2,11 +2,11 @@
     <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
-        <div class="left_side"><img src="assets/imgs/about_me_crop.png" alt=""></div>
+        <div class="left_side"><img src="./assets/imgs/about_me_crop.png" alt=""></div>
         <div class="right_side">
             <h2 class="fontEckzar">About me</h2>
             <div class="scroll_bar">
-                <img src="assets/sidebar/Property 1=Aboutme.svg" alt="">
+                <img src="./assets/sidebar/Property 1=Aboutme.svg" alt="">
             </div>
         </div>
     </div>
@@ -18,7 +18,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <div class="interactive">
                <a href="#contact"><button class="btn fontQuicksand">Let´s Talk</button></a>
-                <img src="assets/emojis/secret.svg" alt="">
+                <img src="./assets/emojis/secret.svg" alt="">
             </div>
             
         </div>
