--- a/src/app/main-content/competences/competences.component.scss
+++ b/src/app/main-content/competences/competences.component.scss
@@ -3,7 +3,7 @@ section {
     scroll-snap-align: start;
     color: #F8F7E5;
     height: 100dvh;
-    width: 100dvw;
+    width: 100%;
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
