--- a/src/app/main-content/reviews/third-review/third-review.component.html
+++ b/src/app/main-content/reviews/third-review/third-review.component.html
@@ -3,7 +3,7 @@
         <div class="name font_bold">Anna Mustermann</div>
         <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, maxime.</div>
         <div class="font_bold ">Frontend Developerin</div>
-        <img *ngIf="showWheel" src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">
+        <img *ngIf="showWheel" src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">
     </div>
     <span class="link font_bold">Zum Linkedin Profile >></span>
 </div>
