--- a/src/app/main-content/work/work.component.scss
+++ b/src/app/main-content/work/work.component.scss
@@ -2,7 +2,7 @@ section {
     background-color: #F8F7E5;
     scroll-snap-align: start;
     height: 100dvh;
-    width: 100dvw;
+    width: 100%;
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
