--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -68,7 +68,7 @@
 			}
 		</a>
 	</div>
-	<a href="#portfolioStart"><img class="personal_logo" src="assets/logo/logo_white_nobg.png" alt="logo in white"></a>	
+	<a href="#portfolioStart"><img class="personal_logo" src="./assets/logo/logo_white_nobg.png" alt="logo in white"></a>	
 	<div class="menu">
 		@if (languageHover) {
 			<svg (mouseover)="languageHover = true"
@@ -162,11 +162,11 @@
             
         </div>
         <div class="links_list">
-            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()">@if(showWheelAbout){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}About me</a>
-            <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="#competences" (click)="closeMenuTab()">@if(showWheelSkills){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Skills</a>
-            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#my_work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
-            <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="#references" (click)="closeMenuTab()">@if(showWheelRef){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}References</a>
-            <a (mouseenter)="showWheelContact = true" (mouseleave)="showWheelContact = false" href="#contact" (click)="closeMenuTab()">@if(showWheelContact){<img src="assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Contact me</a>
+            <a (mouseenter)="showWheelAbout = true" (mouseleave)="showWheelAbout = false" href="#about" (click)="closeMenuTab()">@if(showWheelAbout){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}About me</a>
+            <a (mouseenter)="showWheelSkills = true" (mouseleave)="showWheelSkills = false" href="#competences" (click)="closeMenuTab()">@if(showWheelSkills){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Skills</a>
+            <a (mouseenter)="showWheelPortfolio = true" (mouseleave)="showWheelPortfolio = false" href="#my_work" (click)="closeMenuTab()">@if(showWheelPortfolio){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Portfolio</a>
+            <a (mouseenter)="showWheelRef = true" (mouseleave)="showWheelRef = false" href="#references" (click)="closeMenuTab()">@if(showWheelRef){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}References</a>
+            <a (mouseenter)="showWheelContact = true" (mouseleave)="showWheelContact = false" href="#contact" (click)="closeMenuTab()">@if(showWheelContact){<img src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">}Contact me</a>
         </div>
 		<div class="icons_list">
 			<a href="https://github.com/BaraDroid" target="_blank" (click)="closeMenuTab()"><svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
