--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -8,14 +8,14 @@
                 <span class="fontQuicksand">Frontend Developer</span>
             </div>
             <a href="#contact"><button class="btn fontQuicksand">Get in Touch</button></a>
-            <img src="assets/animation_wheels/scroll_sun.svg" alt="">
+            <img src="./assets/animation_wheels/scroll_sun.svg" alt="">
         </div>
         <div class="atf_right">
-            <img class="sun" src="assets/animation_wheels/orange_sun.svg" alt="">
-            <img class="my_foto" src="assets/imgs/foto_no_bg.png" alt="">
+            <img class="sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
+            <img class="my_foto" src="./assets/imgs/foto_no_bg.png" alt="">
         </div>
         <div class="scroll_bar">
-            <img src="assets/sidebar/Property 1=Default.svg" alt="">
+            <img src="./assets/sidebar/Property 1=Default.svg" alt="">
         </div>
     </div>
 </section>
