--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -1,7 +1,7 @@
 section {
     background-color: #679aac;
     height: 100dvh;
-    width: 100dvw;
+    width: 100%;
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
