--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -9,8 +9,8 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit assumenda perferendis esse sint quos dolor nisi aliquam officia incidunt impedit.
             </div>
             <div class="animation">
-                <img class="learning_sun" src="assets/animation_wheels/orange_sun.svg" alt="">
-                <img class="learning_icon" src="assets/emojis/learning.svg" alt="">
+                <img class="learning_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
+                <img class="learning_icon" src="./assets/emojis/learning.svg" alt="">
             </div>
         </div>
         <div class="content_right fontQuicksand">
@@ -24,7 +24,7 @@
         </div>
     </div>
         <div class="scroll_bar">
-            <img src="assets/sidebar/Property 1=Skills.svg" alt="">
+            <img src="./assets/sidebar/Property 1=Skills.svg" alt="">
         </div>
     </div>
 
