--- a/src/app/main-content/reviews/third-review/third-review.component.scss
+++ b/src/app/main-content/reviews/third-review/third-review.component.scss
@@ -36,3 +36,13 @@ img {
     right: 16px;
     top: 16px;
 }
+
+@media (max-width: 1074px) {
+    .link {font-size: 18px;}
+    .name {font-size: 16px;}
+    .description_text {font-size: 15px;}
+}
+
+@media (max-width: 988px) {
+    .border { width: 100%;}
+}
