--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -9,8 +9,8 @@
             </div>
             <div class="slider">
                 <div class="screenshot">
-                    <img class="project_image" src="assets/screenshots/pokedex.png" alt="">
-                    <img class="wheel" src="assets/animation_wheels/orange_sun.svg" alt="">
+                    <img class="project_image" src="././assets/screenshots/pokedex.png" alt="">
+                    <img class="wheel" src="././assets/animation_wheels/orange_sun.svg" alt="">
                 </div>
                 <div class="description fontQuicksand">
                     <div class="text">
@@ -28,7 +28,7 @@
             </div>
         </div>
         <div class="scroll_bar">
-            <img src="assets/sidebar/Property 1=My_work.svg" alt="">
+            <img src="./assets/sidebar/Property 1=My_work.svg" alt="">
         </div>
     </div>
 
