responsiveness review component

--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -8,6 +8,10 @@ section {
     align-items: center;
 }
 
+app-main-navbar {
+    width: 100%;
+}
+
 .navbar {
     height: 88px;
     padding: 24px 72px;
