--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -11,3 +11,23 @@
 app-above-the-folder {
     width: 100%;
 }
+
+app-about-me {
+    width: 100%;
+}
+
+app-competences {
+    width: 100%;
+}
+
+app-work {
+    width: 100%;
+}
+
+app-reviews {
+    width: 100%;
+}
+
+app-contact {
+    width: 100%;
+}
