--- a/src/app/shared/common-navbar/common-navbar.component.scss
+++ b/src/app/shared/common-navbar/common-navbar.component.scss
@@ -1,6 +1,6 @@
 .navbar {
     height: 88px;
-    width: 100dvw;
+    width: 100%;
     padding: 24px 72px;
     display: flex;
     justify-content: space-between;
