--- a/src/app/main-content/competences/competences.component.scss
+++ b/src/app/main-content/competences/competences.component.scss
@@ -126,10 +126,11 @@ h2 {
     .wrapper {
         display: flex;
         flex-direction: column;
+        align-items: center;
         height: 100%;
     }
     .description {width: 90%;}
-    .content_left {height: fit-content;}
+    .content_left {height: fit-content; justify-content: center;}
     .learning_sun {
         height: 100px;
         width: 100px;
@@ -138,7 +139,7 @@ h2 {
     .learning_icon {left: 32px; bottom: -380px;}
     .content_left h2 {margin-top: 16px;}
     .content_right {margin-bottom: 180px;}
-    .content_right .frontend_icon {width: 102px;}
+    .content_right .frontend_icon {width: 96px;}
     .content_right .frontend_icon span {
         font-size: 13px;
         text-align: center;
@@ -165,7 +166,7 @@ h2 {
 
 @media (max-width: 477px) {
     .content_left h2 {font-size: 32px;}
-    .content_right .frontend_icon {width: 66px;}
+    .content_right .frontend_icon {width: 64px;}
 }
 
 @media (max-width: 450px) {
