--- a/src/app/main-content/reviews/third-review/third-review.component.scss
+++ b/src/app/main-content/reviews/third-review/third-review.component.scss
@@ -44,5 +44,15 @@ img {
 }
 
 @media (max-width: 988px) {
-    .border { width: 100%;}
+    .border { width: 80vw; padding: 16px; gap: 8px;}
+    .box {gap: 0;}
+    .hover_wheel {height: 20px;}
+}
+
+@media (max-width: 710px) {
+    .border {width: 70vw; padding: 8px; gap: 6px;}
+}
+
+@media (max-width: 450px) {
+    .content {padding-right: 16px; padding-left: 16px;}
 }
