contact section responsiveness

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -2,6 +2,7 @@
     <app-common-navbar [whiteColor] = "isWhite"></app-common-navbar>
 
     <div class="content fontQuicksand">
+        <div class="main">
         <div class="content_left">
             <h2 class="fontEckzar">Lass uns zusammen<br> ein tolles Projekt <br>starten!</h2>
             <div>
@@ -14,6 +15,7 @@
                 <app-formular></app-formular>
             </div>
         </div>
+    </div>
         <div class="scroll_bar">
             <img src="assets/sidebar/Property 1=Contact_me.svg" alt="">
         </div>
