--- a/src/app/main-content/contact/formular/formular.component.scss
+++ b/src/app/main-content/contact/formular/formular.component.scss
@@ -53,6 +53,7 @@ input[type=text] {
 input[type=checkbox] {
     border: 3px solid #f9af41;
     background-color: #1d1d1d;
+    margin-right: 8px;
 }
 
 label {
@@ -86,4 +87,32 @@ label {
             background-color: #ff824e;
         }
 }
+}
+
+@media(max-width: 1195px) {
+    input[type=checkbox] {margin-top: 4px;}
+    .checking {align-items: flex-start;}
+}
+
+@media (max-width: 1171px) {
+    .your_info {flex-direction: column; gap: 16px;}   
+    .formular {gap: 16px;}
+    .drop_line {margin-top: 49px;}
+    input[type=text] {width: 100%;}
+    .your_info {align-items: normal;}
+}
+
+@media (max-width: 785px) {
+    .drop_line {margin-top: 0;}
+    .formular {height: 100%;}
+    label {font-size: 18px;}
+    input [type=text] {padding: 8px;}
+    textarea {padding: 8px;}
+}
+
+@media (max-width: 780px) {
+    label {font-size: 16px;}
+    input [type=text] {padding: 8px;}
+    .message {gap: 16px;}
+    .legal_information {font-size: 16px;}
 }
