changes in sourceMap for server

--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -74,6 +74,7 @@ app-footer {width: 100%;}
     .checking {align-items: flex-start;}
     .legal_information {font-size: 16px;}
     input [type=checkbox] {margin-top: 4px; margin-left: 8px;}
+    .content_left {margin-top: 20px;}
 }
 
 @media (max-width: 1171px) {
