all texts translated

--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -4,6 +4,7 @@
         <div class="atf_left">
             <div class="text">
                 <span class="fontQuicksand">Hallo! Ich bin</span>
+                <div>{{ 'above_the_folder.headline1_part' | translate }}</div>
                 <h1 class="fontEckzar">Barbora Lambeinova</h1>
                 <span class="fontQuicksand">Frontend Developer</span>
             </div>
