--- a/src/app/main-content/contact/formular/formular.component.html
+++ b/src/app/main-content/contact/formular/formular.component.html
@@ -24,7 +24,7 @@
             }
         </div>
         <div class="checking">
-                <input type="checkbox" required>
+                <input type="checkbox" [(ngModel)]="contactData.checkboxField" name="checkboxField" required>
                 <span class="legal_information">  I´ve read the <a href="data_protection">privacy policy</a> and agree to the processing of my data.</span>
         </div>
     </div>
