--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -3,8 +3,7 @@
     <div class="content">
         <div class="atf_left">
             <div class="text">
-                <span class="fontQuicksand">Hallo! Ich bin</span>
-                <div>{{ 'above_the_folder.headline1_part' | translate }}</div>
+                <span class="fontQuicksand">{{ 'above_the_folder.headline1_part' | translate }}</span>
                 <h1 class="fontEckzar">Barbora Lambeinova</h1>
                 <span class="fontQuicksand">Frontend Developer</span>
             </div>
