translations pieces added to the html

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -4,7 +4,7 @@
     <div class="content">
         <div class="left_side"><img src="./assets/imgs/about_me_crop.png" alt=""></div>
         <div class="right_side">
-            <h2 class="fontEckzar">About me</h2>
+            <h2 class="fontEckzar">{{ 'about_me.h2' | translate }}</h2>
             <div class="scroll_bar">
                 <img src="./assets/sidebar/Property 1=Aboutme.svg" alt="">
             </div>
@@ -13,9 +13,9 @@
 
     <div class="text_over">
         <div class="description fontQuicksand">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus alias id unde vel at est molestiae hic cumque facere ipsum?</p>
+            <p>{{ 'about_me.text1' | translate }}</p>
             <br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <p>{{ 'about_me.text2' | translate }}</p>
             <div class="interactive">
                <a href="#contact"><button class="btn fontQuicksand">Let´s Talk</button></a>
                 <img src="./assets/emojis/secret.svg" alt="">
