--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -5,7 +5,7 @@
             <div class="text">
                 <span class="fontQuicksand">{{ 'above_the_folder.headline1_part' | translate }}</span>
                 <h1 class="fontEckzar">Barbora Lambeinova</h1>
-                <span class="fontQuicksand">Frontend Developer</span>
+                <span class="fontQuicksand">Frontend {{ 'above_the_folder.job' | translate }}</span>
             </div>
             <a href="#contact"><button class="btn fontQuicksand">Get in Touch</button></a>
             <img src="./assets/animation_wheels/scroll_sun.svg" alt="">
