--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -4,9 +4,9 @@
     <div class="content">
         <div class="wrapper">
         <div class="content_left">
-            <h2 class="fontEckzar">Core Kompetenzen</h2>
+            <h2 class="fontEckzar">{{ 'competencen.h2' | translate }}</h2>
             <div class="description fontQuicksand">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit assumenda perferendis esse sint quos dolor nisi aliquam officia incidunt impedit.
+                {{ 'competencen.text' | translate }}
             </div>
             <div class="animation">
                 <img class="learning_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
