--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -4,10 +4,10 @@
     <div class="content fontQuicksand">
         <div class="main">
         <div class="content_left">
-            <h2 class="fontEckzar">Lass uns zusammen<br> ein tolles Projekt <br>starten!</h2>
+            <h2 class="fontEckzar">{{ 'contact.h2_part1' | translate }}<br>{{ 'contact.h2_part2' | translate }}<br>{{ 'contact.h2_part3' | translate }}</h2>
             <div>
-                <p class="colorize">Got a problem to solve?</p><br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt quod, molestiae debitis in placeat odio!</p>
+                <p class="colorize">{{ 'contact.text1' | translate }}</p><br>
+                <p>{{ 'contact.text2' | translate }}</p>
             </div>
         </div>
         <div class="content_right">
