--- a/src/app/main-content/reviews/third-review/third-review.component.html
+++ b/src/app/main-content/reviews/third-review/third-review.component.html
@@ -5,5 +5,5 @@
         <div class="font_bold ">Frontend Developerin</div>
         <img *ngIf="showWheel" class="hover_wheel" src="./assets/animation_wheels/orange_sun.svg" alt="orange_wheel">
     </div>
-    <span class="link font_bold">Zum Linkedin Profile >></span>
+    <span class="link font_bold">{{ 'reviews.link' | translate }} >></span>
 </div>
