responsiveness for data protection and impressum

--- a/src/app/impressum/impressum.component.html
+++ b/src/app/impressum/impressum.component.html
@@ -8,18 +8,14 @@ Name:<br>
 Barbora Lambeinova
 <br><br>
 Adresse:<br>
-Barbora Lambeinova<br>
 Marktplatz 12<br>
 86650 Wemding<br><br>
-
-Telefon:<br>
-+490151 729 66 314<br><br>
 
 E-Mail-Adresse:<br>
 LambeinovabB "&#64;" seznam.cz<br><br>
 
 Webseite:<br>
-[Deine Webseite-URL]<br><br>
+barbora-lambeinova.de <br><br>
 
 <h4>Haftungsausschluss (Disclaimer):</h4>
 
@@ -29,11 +25,8 @@ Haftung für Links: Unser Angebot enthält Links zu externen Webseiten Dritter, 
 
 Urheberrecht: Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Beiträge Dritter sind als solche gekennzeichnet. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechts bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers.
 
-Datenschutz: Es gelten die Datenschutzbestimmungen gemäß unserer <a href="">Datenschutz</a> <br>
+Datenschutz: Es gelten die Datenschutzbestimmungen gemäß unserer <a href="data_protection">Datenschutz</a>. <br>
 
-Verantwortlich für den Inhalt nach § 55 Abs. 2 RStV (Rundfunkstaatsvertrag):
-<br><br>
-Barbora Lambeinova
     </div>
     <app-footer></app-footer>
 </section>
