--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -159,6 +159,7 @@ app-main-navbar {
 
 @media (max-width: 450px) {
     .content {padding-left: 16px; padding-right: 16px;}
+    .scroll_bar {display: none;}
 }
 
 @media (max-width: 360px) {
