--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -80,4 +80,5 @@ section {
 
 @media (max-width: 450px) {
     .content {padding-right: 16px; padding-left: 16px;}
+    .scroll_bar {display: none;}
 }
