--- a/src/app/data-protection/data-protection.component.scss
+++ b/src/app/data-protection/data-protection.component.scss
@@ -10,3 +10,7 @@ section {
     padding-left: 112px;
     padding-right: 112px;
 }
+
+@media (max-width: 450px) {
+    .content {padding-left: 16px; padding-right: 16px; text-align: center;}
+}
