change about me text todo

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -1,4 +1,5 @@
 <section id="about">
+    <!-- TODO: -->
     <app-common-navbar [whiteColor]="isWhite" ></app-common-navbar>
 
     <div class="content">
