keyframes for jumping icons

--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -19,7 +19,7 @@
             <p>{{ 'about_me.text2' | translate }}</p>
             <div class="interactive">
                <a href="#contact"><button class="btn fontQuicksand">Let´s Talk</button></a>
-                <img src="./assets/emojis/secret.svg" alt="">
+                <img class="jumping_icon" src="./assets/emojis/secret.svg" alt="">
             </div>
             
         </div>
