--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="links oneThird">
             <a href="impressum">Impressum</a>
-            <a href="www.linkedin.com/in/barbora-lambeinova-11b398352" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/barbora-lambeinova-33706a35a/" target="_blank">LinkedIn</a>
             <a href="https://github.com/BaraDroid" target="_blank">Git Hub</a>
         </div>
 </div>
