--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -24,6 +24,7 @@ section {
         margin-left: 40px;
         object-fit: contain;
         height: 100%;
+        border-radius: 4px;
     }
 }
 
