scroll down animation in first section changed from hover to keyframes

--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -8,7 +8,8 @@
                 <span class="fontQuicksand">Frontend {{ 'above_the_folder.job' | translate }}</span>
             </div>
             <a href="#contact"><button class="btn fontQuicksand">Get in Touch</button></a>
-            <img src="./assets/animation_wheels/scroll_sun.svg" alt="">
+            <img class="rotating" src="./assets/animation_wheels/scroll_sun.svg" alt="wheel with 'scroll down' text">
+            <img class="arrow" src="./assets/animation_wheels/white_arrow.svg" alt="white arrow">
         </div>
         <div class="atf_right">
             <img class="sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
