--- a/src/app/shared/main-navbar/main-navbar.component.html
+++ b/src/app/shared/main-navbar/main-navbar.component.html
@@ -1,4 +1,4 @@
-<div id="portfolioStart" class="navbar">
+<div id="portfolioStart" class="navbar" (click)="closeMenuTab()">
 	<div class="icons">
 		<a (mouseover)="githubIconHover = true"
 			(mouseleave)="githubIconHover = false"
@@ -117,7 +117,7 @@
 		
 		
 		@if (menuHover) {
-			<svg (click)="openMenuTab()" (mouseover)="menuHover = true"
+			<svg (click)="openMenuTab($event); $event.stopPropagation()" (mouseover)="menuHover = true"
 			(mouseleave)="menuHover = false" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 				<mask id="mask0_2207_324" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
 				<rect width="32" height="32" fill="#D9D9D9"/>
@@ -128,7 +128,7 @@
 				</svg>
 		}
 		@else {
-			<svg (click)="openMenuTab()" (mouseover)="menuHover = true"
+			<svg (click)="openMenuTab($event); $event.stopPropagation()" (mouseover)="menuHover = true"
 		(mouseleave)="menuHover = false" width="32"
 			height="32"
 			viewBox="0 0 32 32"
@@ -157,8 +157,10 @@
 	<div class="menu_tab fontQuicksand font_bold" [ngClass]="{ 'menu_open': menuOpen }">
         <div class="heading">
             <span>Menu</span>
-            @if (!xHover) {
-                <svg (mouseover)="xHover = true"
+			<img (click)="closeMenuTab()" id="testHover"
+			(mouseleave)="xHover = false" src="./assets/menu_icons/close.svg" alt="x for closing menu">
+            <!-- @if (!xHover) {
+                <svg (mouseover)="xHover = true" 
             (mouseleave)="xHover = false" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_2207_314" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
                 <rect width="32" height="32" fill="#D9D9D9"/>
@@ -169,7 +171,9 @@
                 </svg>
             }
             @else {
-                <svg (click)="closeMenuTab()" (mouseover)="xHover = true"
+				<img (click)="closeMenuTab()" (mouseover)="xHover = true"
+                (mouseleave)="xHover = false" src="./assets/menu_icons/close_hover.svg" alt="x for closing menu"> -->
+                <!-- <svg (click)="closeMenuTab()" (mouseover)="xHover = true"
                 (mouseleave)="xHover = false" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <mask id="mask0_2207_327" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="32" height="32">
                     <rect width="32" height="32" fill="#D9D9D9"/>
@@ -177,8 +181,8 @@
                     <g mask="url(#mask0_2207_327)">
                     <path d="M16.001 17.8677L9.46771 24.401C9.22326 24.6455 8.91215 24.7677 8.53438 24.7677C8.1566 24.7677 7.84549 24.6455 7.60104 24.401C7.3566 24.1566 7.23438 23.8455 7.23438 23.4677C7.23438 23.0899 7.3566 22.7788 7.60104 22.5344L14.1344 16.001L7.60104 9.46771C7.3566 9.22326 7.23438 8.91215 7.23438 8.53438C7.23438 8.1566 7.3566 7.84549 7.60104 7.60104C7.84549 7.3566 8.1566 7.23438 8.53438 7.23438C8.91215 7.23438 9.22326 7.3566 9.46771 7.60104L16.001 14.1344L22.5344 7.60104C22.7788 7.3566 23.0899 7.23438 23.4677 7.23438C23.8455 7.23438 24.1566 7.3566 24.401 7.60104C24.6455 7.84549 24.7677 8.1566 24.7677 8.53438C24.7677 8.91215 24.6455 9.22326 24.401 9.46771L17.8677 16.001L24.401 22.5344C24.6455 22.7788 24.7677 23.0899 24.7677 23.4677C24.7677 23.8455 24.6455 24.1566 24.401 24.401C24.1566 24.6455 23.8455 24.7677 23.4677 24.7677C23.0899 24.7677 22.7788 24.6455 22.5344 24.401L16.001 17.8677Z" fill="#FF834F"/>
                     </g>
-                    </svg>
-            }
+                    </svg> -->
+            <!-- } -->
             
         </div>
         <div class="links_list">
